--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.4",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
     "tui-calendar": "^1.15.3"
   }
 }
