--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "scripts": {
     "start": "nodemon server.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest "
   },
   "dependencies": {
     "@toast-ui/calendar": "^2.1.3",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
@@ -15,9 +16,11 @@
     "mongoose": "^6.7.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "selenium-webdriver": "^4.8.1",
+    "supertest": "^6.3.3",
     "tui-calendar": "^1.15.3"
   },
   "devDependencies": {
-    "jest": "^29.4.3"
+    "jest": "^29.5.0"
   }
 }
